Add initial support for driver asynchronous resolution to connector proxies

--- a/connectors/src/main/resources/eu/mosaic_cloud/connectors/config.properties
+++ b/connectors/src/main/resources/eu/mosaic_cloud/connectors/config.properties
@@ -20,6 +20,7 @@
 
 GenericConnector.0=interop.channel.address
 GenericConnector.1=interop.driver.identifier
+GenericConnector.2=interop.driver
 
 GenericKvStoreConnector.0=kvstore.connector_threads
 GenericKvStoreConnector.1=kvstore.bucket
