Uptade example cloudlet tests
* Add tests for the other cloudlets.
* Create by default one embedded Riak and RabbitMQ driver just for the unit tests.
* Update property files according to the new driver resolution rule.

--- a/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
+++ b/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
@@ -31,6 +31,7 @@ urgent.queue.consumer.amqp.auto_delete=false
 urgent.queue.consumer.amqp.passive=false
 urgent.queue.consumer.amqp.exclusive=false
 urgent.queue.consumer.amqp.auto_ack=false
+urgent.queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 batch.queue.consumer.amqp.exchange=feeds.index-data
 batch.queue.consumer.amqp.exchange_type=topic
@@ -41,13 +42,19 @@ batch.queue.consumer.amqp.auto_delete=false
 batch.queue.consumer.amqp.passive=false
 batch.queue.consumer.amqp.exclusive=false
 batch.queue.consumer.amqp.auto_ack=false
+batch.queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 metadata.kvstore.bucket=feed-metadata
+metadata.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 timelines.kvstore.bucket=feed-timelines
+timelines.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 items.kvstore.bucket=feed-items
+items.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 data.kvstore.bucket=feed-data
+data.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 tasks.kvstore.bucket=feed-tasks
+tasks.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
