--- a/examples/simple-cloudlets/src/main/resources/logging-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/logging-cloudlet.properties
@@ -17,6 +17,7 @@
 # limitations under the License.
 # #L%
 ###
+
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.LoggingCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.LoggingCloudlet$LoggingCloudletContext
 cloudlet.resource_file=logging-cloudlet.prop
@@ -29,6 +30,8 @@ queue.publisher.amqp.exchange=exchange-test
 queue.publisher.amqp.routing_key=rk-2
 queue.publisher.amqp.queue=user-queue
 
+queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+
 # just some test data
 test.user=dummy
 test.password=mOsAiC
@@ -38,6 +41,4 @@ test.token=got_it
 # this is just for test
 kvstore.kvstore.connector_name=KVSTORE
 kvstore.kvstore.bucket=logging-test
-
-
-
+kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
