--- a/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
@@ -17,6 +17,7 @@
 # limitations under the License.
 # #L%
 ###
+
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PingCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PingCloudlet$PingCloudletContext
 cloudlet.resource_file=ping-cloudlet.properties
@@ -39,4 +40,4 @@ queue.publisher.amqp.auto_delete=true
 queue.publisher.amqp.passive=false
 queue.publisher.amqp.exclusive=false
 
-
+queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
