--- a/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
@@ -17,6 +17,7 @@
 # limitations under the License.
 # #L%
 ###
+
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PongCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PongCloudlet$PongCloudletContext
 cloudlet.resource_file=pong-cloudlet.properties
@@ -39,12 +40,8 @@ queue.publisher.amqp.auto_delete=true
 queue.publisher.amqp.passive=false
 queue.publisher.amqp.exclusive=false
 
+queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 kvstore.kvstore.connector_name=KVSTORE
 kvstore.kvstore.bucket=ping-pong
-
-
-
-
-
-
+kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
