--- a/examples/simple-cloudlets/src/main/resources/publisher-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/publisher-cloudlet.properties
@@ -17,6 +17,7 @@
 # limitations under the License.
 # #L%
 ###
+
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PublisherCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PublisherCloudlet$PublisherCloudletContext
 cloudlet.resource_file=publisher-cloudlet.prop
@@ -24,4 +25,4 @@ cloudlet.resource_file=publisher-cloudlet.prop
 queue.publisher.amqp.exchange=simple-exchange
 queue.publisher.amqp.routing_key=simple-rk
 queue.publisher.amqp.queue=simple-queue
-
+queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
