--- a/examples/simple-cloudlets/src/main/resources/simple-logging-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/simple-logging-cloudlet.properties
@@ -17,6 +17,7 @@
 # limitations under the License.
 # #L%
 ###
+
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.SimpleLoggingCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.SimpleLoggingCloudlet$LoggingCloudletContext
 cloudlet.resource_file=simple-logging-cloudlet.prop
@@ -29,12 +30,9 @@ queue.publisher.amqp.exchange=exchange-test
 queue.publisher.amqp.routing_key=rk-2
 queue.publisher.amqp.queue=user-queue
 
+queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+
 # just some test data
 test.user=dummy
 test.password=mOsAiC
 test.token=got_it
-
-
-
-
-
