--- a/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
@@ -17,6 +17,7 @@
 # limitations under the License.
 # #L%
 ###
+
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.ConsumerCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.ConsumerCloudlet$ConsumerCloudletContext
 cloudlet.resource_file=consumer-cloudlet.prop
@@ -24,7 +25,4 @@ cloudlet.resource_file=consumer-cloudlet.prop
 queue.consumer.amqp.exchange=simple-exchange
 queue.consumer.amqp.routing_key=simple-rk
 queue.consumer.amqp.queue=simple-queue
-
-
-
-
+queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
