Refactor existing component bootstrap code
!! NOTE !! This renders for the moment components unusable.

--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -152,7 +152,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>eu.mosaic_cloud.drivers.DriverPreMain</mainClass>
+							<mainClass>eu.mosaic_cloud.drivers.DriverComponentPreMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
