--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 				<version>${versions.plugins.dependency}</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<phase>package${_maven_pom_skip_analyze}</phase>
 						<goals>
 							<goal>analyze-only</goal>
 						</goals>
@@ -102,7 +102,7 @@
 				<version>${versions.plugins.license}</version>
 				<executions>
 					<execution>
-						<phase>verify</phase>
+						<phase>verify${_maven_pom_skip_licenses}</phase>
 						<goals>
 							<goal>download-licenses</goal>
 							<goal>update-project-license</goal>
@@ -245,8 +245,9 @@
 		
 		<license.licenseName>apache_v2</license.licenseName>
 		
-		<_maven_pom_phase />
 		<_maven_pom_package />
+		<_maven_pom_skip_analyze />
+		<_maven_pom_skip_licenses />
 		
 	</properties>
 	
