Fix the cloudlet examples property files

--- a/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
+++ b/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
@@ -20,7 +20,7 @@
 
 cloudlet.main_class=eu.mosaic_cloud.examples.realtime_feeds.indexer.IndexerCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.realtime_feeds.indexer.IndexerCloudlet$IndexerCloudletContext
-cloudlet.resource_file=indexer-cloudlet.prop
+cloudlet.resource_file=indexer-cloudlet.properties
 
 urgent.queue.consumer.amqp.exchange=feeds.index-data
 urgent.queue.consumer.amqp.exchange_type=topic
