--- a/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
@@ -20,7 +20,7 @@
 
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.ConsumerCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.ConsumerCloudlet$ConsumerCloudletContext
-cloudlet.resource_file=consumer-cloudlet.prop
+cloudlet.resource_file=consumer-cloudlet.properties
 
 queue.consumer.amqp.exchange=simple-exchange
 queue.consumer.amqp.routing_key=simple-rk
