--- a/examples/simple-cloudlets/src/main/resources/hello-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/hello-cloudlet.properties
@@ -20,4 +20,4 @@
 
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.HelloWorldCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.HelloWorldCloudlet$HelloCloudletContext
-cloudlet.resource_file=hello-cloudlet.prop
+cloudlet.resource_file=hello-cloudlet.properties
