--- a/examples/simple-cloudlets/src/main/resources/logging-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/logging-cloudlet.properties
@@ -20,7 +20,7 @@
 
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.LoggingCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.LoggingCloudlet$LoggingCloudletContext
-cloudlet.resource_file=logging-cloudlet.prop
+cloudlet.resource_file=logging-cloudlet.properties
 
 queue.consumer.amqp.exchange=exchange-test
 queue.consumer.amqp.routing_key=rk-1
