--- a/examples/simple-cloudlets/src/main/resources/publisher-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/publisher-cloudlet.properties
@@ -20,7 +20,7 @@
 
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PublisherCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PublisherCloudlet$PublisherCloudletContext
-cloudlet.resource_file=publisher-cloudlet.prop
+cloudlet.resource_file=publisher-cloudlet.properties
 
 queue.publisher.amqp.exchange=simple-exchange
 queue.publisher.amqp.routing_key=simple-rk
