--- a/examples/simple-cloudlets/src/main/resources/user-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/user-cloudlet.properties
@@ -20,7 +20,7 @@
 
 cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.UserCloudlet$LifeCycleHandler
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.UserCloudlet$UserCloudletContext
-cloudlet.resource_file=user-cloudlet.prop
+cloudlet.resource_file=user-cloudlet.properties
 
 queue.consumer.amqp.exchange=exchange-test
 queue.consumer.amqp.routing_key=rk-2
