--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -23,17 +23,17 @@
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.platform</groupId>
-			<artifactId>platform-interop</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>connectors</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.interoperability</groupId>
 			<artifactId>interoperability-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.interoperability</groupId>
+			<artifactId>interoperability-zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -104,7 +104,7 @@
 							</descriptorRefs>
 							<archive>
 								<manifest>
-									<mainClass>eu.mosaic_cloud.cloudlets.runtime.CloudletComponentPreMain</mainClass>
+									<mainClass>eu.mosaic_cloud.cloudlets.implementation.container.CloudletComponentPreMain</mainClass>
 								</manifest>
 							</archive>
 						</configuration>
