--- a/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlets/config.properties
+++ b/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlets/config.properties
@@ -30,3 +30,6 @@ CloudletComponent.8=cloudlet.main_class
 CloudletComponent.9=cloudlet.context_class
 CloudletComponent.10=cloudlet.resource_file
 CloudletComponent.11=cloudlet.no_instances
+CloudletComponent.12=channelEndpoint
+CloudletComponent.13=channelIdentifier
+CloudletComponent.14=c2e40f0b2c041bc694ace68ace08420d40f9cbc0
