Minor cloudlets refactoring (support for merging the major refactoring)
* Split core cloudlet implementation in `cloudlet` and `container`.
* Remove obsolete `ResourceFinder` class.

--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -104,7 +104,7 @@
 							</descriptorRefs>
 							<archive>
 								<manifest>
-									<mainClass>eu.mosaic_cloud.cloudlets.runtime.CloudletComponentPreMain</mainClass>
+									<mainClass>eu.mosaic_cloud.cloudlets.implementation.container.CloudletComponentPreMain</mainClass>
 								</manifest>
 							</archive>
 						</configuration>
