Cleanup and correct properties files

--- a/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
+++ b/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
@@ -45,16 +45,16 @@ batch.queue.consumer.amqp.auto_ack=false
 batch.queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 metadata.kvstore.bucket=feed-metadata
-metadata.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+metadata.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 timelines.kvstore.bucket=feed-timelines
-timelines.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+timelines.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 items.kvstore.bucket=feed-items
-items.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+items.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 data.kvstore.bucket=feed-data
-data.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+data.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 tasks.kvstore.bucket=feed-tasks
-tasks.kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+tasks.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
