--- a/components-httpg-jetty-connector/pom.xml
+++ b/components-httpg-jetty-connector/pom.xml
@@ -47,6 +47,24 @@
 			<version>${versions.dependencies.jetty-eclipse}</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${versions.dependencies.jsp-javax}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-jsp-2.1</artifactId>
+			<version>${versions.dependencies.jsp-eclipse}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jsp-2.1-glassfish</artifactId>
+			<version>${versions.dependencies.jsp-mortbay}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
 			<version>${versions.dependencies.amqp}</version>
