--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 						</goals>
 						<configuration>
 							<failOnWarning>true</failOnWarning>
+							<ignoreNonCompile>true</ignoreNonCompile>
 						</configuration>
 					</execution>
 				</executions>
