--- a/drivers-stubs/pom.xml
+++ b/drivers-stubs/pom.xml
@@ -6,14 +6,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>eu.mosaic_cloud.platform</groupId>
-		<artifactId>platform-parent</artifactId>
+		<groupId>eu.mosaic_cloud.drivers</groupId>
+		<artifactId>drivers-parent</artifactId>
 		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
-		<relativePath>../platform-parent</relativePath>
+		<relativePath>../drivers-parent</relativePath>
 	</parent>
 	
-	<artifactId>drivers</artifactId>
-	<name>mosaic-drivers</name>
+	<artifactId>drivers-stubs</artifactId>
+	<name>mosaic-drivers-stubs</name>
 	
 	<dependencies>
 		<dependency>
