Split drivers stubs into multiple artifacts based on the exposed resource
* Split `drivers-stubs` into `drivers-stubs-amqp`, `drivers-stubs-kv-common` and
 `drivers-stubs-X` (where X is `riak`, `membase`, and `redis`).
* Update various Java files to match this change.
* Update various POM files to match this change.

!!!! NOTE !!!! Currently the driver component is not working due to broken scripts.

--- a/drivers-container/pom.xml
+++ b/drivers-container/pom.xml
@@ -12,10 +12,15 @@
 		<relativePath>../drivers-parent</relativePath>
 	</parent>
 	
-	<artifactId>drivers-core</artifactId>
-	<name>mosaic-drivers-core</name>
+	<artifactId>drivers-container</artifactId>
+	<name>mosaic-drivers-container</name>
 	
 	<dependencies>
+		<dependency>
+			<groupId>eu.mosaic_cloud.drivers</groupId>
+			<artifactId>drivers-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>platform-core</artifactId>
@@ -32,6 +37,21 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>eu.mosaic_cloud.components</groupId>
+			<artifactId>components-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.components</groupId>
+			<artifactId>components-container</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.components</groupId>
+			<artifactId>components-launcher</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-callbacks</artifactId>
 			<version>${project.version}</version>
@@ -43,8 +63,13 @@
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.tools</groupId>
-			<artifactId>tools-miscellaneous</artifactId>
+			<artifactId>tools-exceptions</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${versions.dependencies.guava}</version>
 		</dependency>
 	</dependencies>
 	
