Fix file headers and add licenses

--- a/drivers-stubs/riak/src/main/resources/eu/mosaic_cloud/drivers/kvstore/driver-component.properties
+++ b/drivers-stubs/riak/src/main/resources/eu/mosaic_cloud/drivers/kvstore/driver-component.properties
@@ -1,6 +1,6 @@
 ###
 # #%L
-# mosaic-drivers
+# mosaic-drivers-stubs-riak
 # %%
 # Copyright (C) 2010 - 2012 Institute e-Austria Timisoara (Romania)
 # %%
