Finalize Java drivers implementation split (working components)
* Refactor package names (replace `eu.mosaic_cloud.drivers.interop.SOMETHING` with `..drivers.SOMETHING.interop`.
* Refactor driver component initialization. (Put classes in own package `...drivers.SOMETHING.component`.)
* Drivers were tested and worked against current versions (only Riak and Rabbit).

--- a/drivers-stubs/amqp/pom.xml
+++ b/drivers-stubs/amqp/pom.xml
@@ -113,7 +113,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>eu.mosaic_cloud.drivers.DriverComponentPreMain</mainClass>
+							<mainClass>eu.mosaic_cloud.drivers.queue.amqp.component.AmqpDriverComponentPreMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -130,7 +130,7 @@
 	</build>
 	
 	<properties>
-		<_maven_pom_package>mosaic-components-java-driver-container</_maven_pom_package>
+		<_maven_pom_package>mosaic-components-java-driver-amqp</_maven_pom_package>
 	</properties>
 	
 </project>
