--- a/drivers-stubs/memcache/pom.xml
+++ b/drivers-stubs/memcache/pom.xml
@@ -122,7 +122,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>eu.mosaic_cloud.drivers.DriverComponentPreMain</mainClass>
+							<mainClass>eu.mosaic_cloud.drivers.kvstore.component.KvDriverComponentPreMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -139,7 +139,7 @@
 	</build>
 	
 	<properties>
-		<_maven_pom_package>mosaic-components-java-driver-container</_maven_pom_package>
+		<_maven_pom_package>mosaic-components-java-driver-memcache</_maven_pom_package>
 	</properties>
 	
 </project>
