--- a/drivers-stubs/redis/pom.xml
+++ b/drivers-stubs/redis/pom.xml
@@ -78,7 +78,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>eu.mosaic_cloud.drivers.DriverComponentPreMain</mainClass>
+							<mainClass>eu.mosaic_cloud.drivers.kvstore.component.KvDriverComponentPreMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -95,7 +95,7 @@
 	</build>
 	
 	<properties>
-		<_maven_pom_package>mosaic-components-java-driver-container</_maven_pom_package>
+		<_maven_pom_package>mosaic-components-java-driver-redis</_maven_pom_package>
 	</properties>
 	
 </project>
